k8s/comment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
        - name: comment-service
          image: nguyenchithanh/loopme-comment-service:latest
          ports:
            - containerPort: 8003
