k8s/friend-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friend-service
  template:
    metadata:
      labels:
        app: friend-service
    spec:
      containers:
        - name: friend-service
          image: your-docker-repo/friend-service:latest
          ports:
            - containerPort: 8001
