k8s/group-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group-service
  template:
    metadata:
      labels:
        app: group-service
    spec:
      containers:
        - name: group-service
          image: nguyenchithanh/loopme-group-service:latest
          ports:
            - containerPort: 8005
