k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          # Bỏ comment các biến môi trường xác thực để dễ dàng phát triển
          # env:
          #   - name: MONGO_INITDB_ROOT_USERNAME
          #     value: "root"
          #   - name: MONGO_INITDB_ROOT_PASSWORD
          #     value: "password"
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
