k8s/post-vote-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-vote-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-vote-service
  template:
    metadata:
      labels:
        app: post-vote-service
    spec:
      containers:
        - name: post-vote-service
          image: your-docker-repo/post-vote-service:latest
          ports:
            - containerPort: 8001
