k8s/realtime-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime-service
  template:
    metadata:
      labels:
        app: realtime-service
    spec:
      containers:
        - name: realtime-service
          image: nguyenchithanh/loopme-realtime-service:latest
          ports:
            - containerPort: 8009
