k8s/chat-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: ClusterIP
  selector:
    app: chat-service
  ports:
    - port: 8002
      targetPort: 8002
