k8s/comment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  type: ClusterIP
  selector:
    app: comment-service
  ports:
    - port: 8003
      targetPort: 8003
