k8s/friend-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friend-service
spec:
  type: ClusterIP
  selector:
    app: friend-service
  ports:
    - port: 8001
      targetPort: 8001
