k8s/group-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: group-service
spec:
  type: ClusterIP
  selector:
    app: group-service
  ports:
    - port: 8001
      targetPort: 8001
