k8s/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - port: 8006
      targetPort: 8006
