k8s/post-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  type: ClusterIP
  selector:
    app: post-service
  ports:
    - port: 8001
      targetPort: 8001
