k8s/realtime-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realtime-service
spec:
  type: ClusterIP
  selector:
    app: realtime-service
  ports:
    - port: 8009
      targetPort: 8009
