k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loopme-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: loopme.apis
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8000
          - path: /socket.io/(.*)
            pathType: Prefix
            backend:
              service:
                name: realtime-service
                port:
                  number: 8009
